--- a/.htaccess
+++ b/.htaccess
@@ -2,11 +2,11 @@
 # BEGIN WordPress
 <IfModule mod_rewrite.c>
 RewriteEngine On
-RewriteBase /stmungo/
+RewriteBase /mungo/
 RewriteRule ^index\.php$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . /stmungo/index.php [L]
+RewriteRule . /mungo/index.php [L]
 </IfModule>
 
 # END WordPress
